Fixed all tests.  Changed ADL to use URI class